fixed bug with scrollbar and dialogs

--- a/plan_proposals/static/css/planning_feedback.css
+++ b/plan_proposals/static/css/planning_feedback.css
@@ -64,7 +64,6 @@ button.drawbutton {
 /* Carousel style */
 .carousel {
     width: 100%;
-    overflow-y: scroll;
     white-space: nowrap;
     text-align: center;
 }
